Huge commit, with new pages, features, and Auth0 login!

--- a/package.json
+++ b/package.json
@@ -29,11 +29,14 @@
   "author": "Cory House",
   "license": "MIT",
   "dependencies": {
+    "auth0-lock": "^10.0.0-rc.1",
     "es6-promise": "3.2.1",
     "isomorphic-fetch": "2.2.1",
     "object-assign": "4.1.0",
     "react": "15.2.0",
+    "react-bootstrap": "^0.29.4",
     "react-dom": "15.2.0",
+    "react-popup": "0.4.2",
     "react-redux": "4.4.5",
     "react-router": "2.5.2",
     "react-router-redux": "4.0.5",
